# sena

./: .clippy-output.jsonl  .clippy_active_output.txt  .clippy_output.txt  .fmt_check_active_output.txt  .fmt_check_output.txt  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TESTING_M4_3.md  TESTING_M5.md
.cargo/: config.toml
.github/: copilot-instructions.md  pull_request_template.md
_legacy_crates/: README.md
_legacy_crates/crypto/: Cargo.toml
_legacy_crates/crypto/src/: argon2_kdf.rs  file.rs  keychain.rs  reencrypt.rs
_legacy_crates/memory/: Cargo.toml
_legacy_crates/memory/src/: actor.rs  embedder.rs  encrypted_store.rs  lib.rs  working_memory.rs
_legacy_crates/stt-worker/: Cargo.toml
assets/: logo.txt
crates/bus/: Cargo.toml
crates/bus/src/: actor.rs  bus.rs  events.rs  ipc.rs  lib.rs
crates/bus/src/events/: ctp.rs  inference.rs  memory.rs  mod.rs  platform.rs  platform_vision.rs  soul.rs  speech.rs  system.rs  transparency.rs
crates/cli/: Cargo.toml
crates/cli/src/: display.rs  ipc_client.rs  main.rs  model_selector.rs  onboarding.rs  query.rs  shell.rs  tui_state.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: aes.rs  argon2_kdf.rs  envelope.rs  error.rs  keychain.rs  keys.rs  lib.rs  reencrypt.rs  working_file.rs
crates/ctp/: Cargo.toml
crates/ctp/src/: actor.rs  context_assembler.rs  ctp_actor.rs  lib.rs  pattern_engine.rs  signal_buffer.rs  task_inference.rs  transparency_query.rs  trigger_gate.rs  user_state.rs
crates/ctp/tests/: intelligence_integration.rs
crates/inference/: Cargo.toml
crates/inference/src/: actor.rs  backend.rs  chat_template.rs  discovery.rs  error.rs  identity_signals.rs  lib.rs  llama_backend.rs  manifest.rs  mock_backend.rs  registry.rs  transparency_query.rs
crates/memory/: Cargo.toml
crates/memory/src/: actor.rs  ech0_placeholder.rs  embedder.rs  encrypted_store.rs  error.rs  extractor.rs  lib.rs  redacted.rs  transparency_query.rs  working_memory.rs
crates/platform/: Cargo.toml
crates/platform/src/: adapter.rs  dirs.rs  error.rs  lib.rs  linux.rs  macos.rs  platform_actor.rs  windows.rs
crates/prompt/: Cargo.toml
crates/prompt/src/: composer.rs  lib.rs  segment.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: analytics.rs  boot.rs  config.rs  config_validation.rs  download_manager.rs  hardware_profile.rs  ipc_server.rs  lib.rs  models.rs  registry.rs  shutdown.rs  single_instance.rs  supervisor.rs  tray.rs
crates/runtime/tests/: end_to_end_inference.rs  ipc_integration.rs  stability.rs
crates/soul/: Cargo.toml
crates/soul/src/: actor.rs  distillation.rs  encrypted_db.rs  error.rs  lib.rs  preference_learning.rs  redacted.rs  schema.rs  summary_assembler.rs  temporal_model.rs
crates/soul/tests/: intelligence_integration.rs
crates/speech/: Cargo.toml
crates/speech/src/: audio_input.rs  audio_output.rs  candle_whisper.rs  download.rs  error.rs  lib.rs  models.rs  onboarding.rs  parakeet_backend.rs  parakeet_stt.rs  sherpa_stt.rs  silence_detector.rs  stt.rs  stt_actor.rs  telemetry.rs  tts_actor.rs  wakeword.rs  worker.rs
crates/speech/src/stt/: backend_trait.rs  confidence.rs  factory.rs  mock_backend.rs  mod.rs  parakeet_backend.rs  pipeline.rs  sherpa_backend.rs  vad.rs  whisper_backend.rs
docs/: BLOCKED.md  INFERENCE_EXTRACTION.md  PRD.md  (+3 more)
sena/: .gitignore  Cargo.toml
sena/.cargo/: config.toml
sena/crates/bus/: Cargo.toml
sena/crates/bus/src/: actor.rs  bus.rs  causal.rs  lib.rs
sena/crates/bus/src/events/: ctp.rs  download.rs  inference.rs  memory.rs  mod.rs  model.rs  platform.rs  soul.rs  speech.rs  system.rs  telemetry.rs  transparency.rs
sena/crates/cli/: Cargo.toml
sena/crates/cli/src/: config_editor.rs  daemon_ipc.rs  error.rs  lib.rs  main.rs  onboarding.rs  shell.rs  theme.rs  transparency_format.rs
sena/crates/crypto/: Cargo.toml
sena/crates/crypto/src/: blob.rs  error.rs  key.rs  keystore.rs  layer.rs  lib.rs  wrapper.rs
sena/crates/ctp/: Cargo.toml
sena/crates/ctp/src/: actor.rs  context_assembler.rs  error.rs  lib.rs  pattern_engine.rs  signal.rs  signal_buffer.rs  snapshot.rs  task_inference.rs  transparency_query.rs  trigger_gate.rs  user_state.rs
sena/crates/daemon/: Cargo.toml
sena/crates/daemon/src/: error.rs  main.rs  tray.rs
sena/crates/daemon/src/commands/: config_commands.rs  events_commands.rs  handlers.rs  inference_commands.rs  loops_commands.rs  memory_commands.rs  runtime_commands.rs  speech_commands.rs  transparency_commands.rs
sena/crates/inference/: Cargo.toml
sena/crates/inference/src/: actor.rs  backend.rs  discovery.rs  error.rs  filter.rs  lib.rs  llama_adapter.rs  llama_loader.rs  mock.rs  queue.rs  registry.rs  stream.rs  types.rs
sena/crates/ipc/: Cargo.toml
sena/crates/ipc/src/: client.rs  error.rs  framing.rs  handler.rs  lib.rs  protocol.rs  registry.rs  server.rs
sena/crates/memory/: Cargo.toml
sena/crates/memory/src/: actor.rs  backend.rs  echo0_backend.rs  embedder.rs  encrypted_store.rs  error.rs  extractor.rs  lib.rs  models.rs  types.rs  working_memory.rs
sena/crates/platform/: Cargo.toml
sena/crates/platform/src/: actor.rs  adapter.rs  backend.rs  backends.rs  error.rs  lib.rs  monitor.rs  types.rs
sena/crates/prompt/: Cargo.toml
sena/crates/prompt/src/: actor.rs  composer.rs  error.rs  lib.rs  segment.rs  types.rs
sena/crates/runtime/: Cargo.toml
sena/crates/runtime/src/: analytics.rs  boot.rs  builder.rs  config.rs  download_manager.rs  error.rs  health.rs  ipc_server.rs  lib.rs  llama_backend.rs  single_instance.rs  supervisor.rs
sena/crates/soul/: Cargo.toml
sena/crates/soul/src/: actor.rs  error.rs  lib.rs  redb_store.rs  schema.rs  store.rs  types.rs
sena/crates/speech/: Cargo.toml
sena/crates/speech/src/: audio_input.rs  audio_output.rs  backend.rs  error.rs  lib.rs  models.rs  onboarding.rs  parakeet_backend.rs  piper_backend.rs  silence_detector.rs  stt_actor.rs  tts_actor.rs  types.rs  wakeword.rs
sena/crates/text/: Cargo.toml
sena/crates/text/src/: lib.rs  sentence.rs
sena/docs/_scratch/: daemon-cli-split.md
(+85 files in other folders)
