[workspace]
resolver = "2"
members = [
    "crates/bus",
    "crates/crypto",
    "crates/runtime",
    "crates/platform",
    "crates/ctp",
    "crates/inference",
    "crates/memory",
    "crates/prompt",
    "crates/soul",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["kura120"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ontic-ai/sena"

[workspace.dependencies]
tokio = { version = "1.41", features = ["full"] }
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
toml = "0.8"
anyhow = "1.0"
zeroize = { version = "1.8", features = ["derive"] }
rand = "0.8"
aes-gcm = "0.10"
argon2 = "0.5"
keyring = "3"
redb = "2"
llama-cpp-2 = "0.1"
ech0 = { git = "https://github.com/kura120/ech0", tag = "v0.1.0" }
arboard = "3"
rdev = "0.5"
notify = "6"
ratatui = { version = "0.28", features = ["crossterm"] }
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }

[patch.crates-io]
# usearch 2.24.0 does not guard MAP_FAILED usage behind #ifdef _WIN32,
# causing build failures with MSVC. This local patch adds the guard.
usearch = { path = "patches/usearch-2.24.0-win-fix" }
