# ⚠️ DEPRECATED — This is the root/donor workspace (Rust 2021, legacy)
# ✓ CANONICAL workspace is at: ./sena/Cargo.toml (Rust 2024, active development)
#
# Do NOT use this workspace for new development or builds.
# All active crates and features live in ./sena/
#
# This workspace is retained for archival purposes only.
# Legacy source files are archived under ./_legacy_crates/.
# Historical consolidation notes live under ./sena/docs/_scratch/.

[workspace]
resolver = "2"
members = []

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["kura120"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ontic-ai/sena"

[workspace.dependencies]
tokio = { version = "1.41", features = ["full"] }
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
toml = "1.1.2"
anyhow = "1.0"
zeroize = { version = "1.8", features = ["derive"] }
rand = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
aes-gcm = "0.10"
argon2 = "0.5"
keyring = "3"
redb = "3.1.2"
infer = { git = "https://github.com/ontic-ai/infer", tag = "v0.1.1", features = ["llama"] }
ech0 = { git = "https://github.com/kura120/ech0", tag = "v0.1.2" }
arboard = "3"
rdev = "0.5"
notify = "8.2.0"
ratatui = { version = "0.30", features = ["crossterm"] }
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }
