[package]
name = "memory"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
bus = { path = "../bus" }
crypto = { path = "../crypto" }
soul = { path = "../soul" }
thiserror.workspace = true
tracing = { workspace = true }
tokio.workspace = true
ech0.workspace = true
chrono = "0.4"
uuid = "1"
serde_json = "1"

[dev-dependencies]
tempfile = "3"
