[package]
name = "stt-worker"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "stt-worker"
path = "src/main.rs"

[dependencies]
whisper-rs = "0.16.0"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
