[package]
name = "cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "sena"
path = "src/main.rs"

[dependencies]
runtime = { path = "../runtime" }
bus = { path = "../bus" }
inference = { path = "../inference" }
platform = { path = "../platform" }
tokio = { workspace = true }
anyhow = { workspace = true }
crossterm = { version = "0.28", features = [] }
