[package]
name = "cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "sena"
path = "src/main.rs"

[features]
default = []
whisper = ["runtime/whisper"]

[dependencies]
runtime = { path = "../runtime" }
bus = { path = "../bus" }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
crossterm = { version = "0.28", features = [] }
ratatui = { workspace = true }
arboard = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
toml = { workspace = true }
serde_json = "1"
