[package]
name = "crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
zeroize = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
aes-gcm = { workspace = true }
argon2 = { workspace = true }
keyring = { workspace = true }

[dev-dependencies]
tempfile = "3"
