[package]
name = "inference"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
# Enable NVIDIA CUDA GPU inference. Requires CUDA toolkit installed.
cuda = ["llama-cpp-2/cuda"]
# Enable Apple Metal GPU inference (macOS only).
metal = ["llama-cpp-2/metal"]

[dependencies]
bus = { path = "../bus" }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = "1"
async-trait = { workspace = true }
tokio = { workspace = true }
llama-cpp-2 = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
