[package]
name = "inference"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
# Enable NVIDIA CUDA GPU inference. Requires CUDA toolkit installed.
cuda = ["infer/cuda"]
# Enable Apple Metal GPU inference (macOS only).
metal = ["infer/metal"]

[dependencies]
bus = { path = "../bus" }
text = { path = "../text" }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = "1"
async-trait = { workspace = true }
tokio = { workspace = true }
infer = { workspace = true }
tracing = { workspace = true }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
