[package]
name = "memory"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bus = { path = "../bus" }
crypto = { path = "../crypto" }
soul = { path = "../soul" }
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
