[package]
name = "platform"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bus = { path = "../bus" }
tokio = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
arboard = { workspace = true }
rdev = { workspace = true }
notify = { workspace = true }
sysinfo = "0.32"
sha2 = "0.10"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
