[package]
name = "prompt"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bus = { path = "../bus" }
ctp = { path = "../ctp" }
inference = { path = "../inference" }
memory = { path = "../memory" }
thiserror.workspace = true