[package]
name = "runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
whisper = ["speech/whisper"]

[dependencies]
async-trait = { workspace = true }
bus = { path = "../bus" }
crypto = { path = "../crypto" }
ctp = { path = "../ctp" }
inference = { path = "../inference" }
memory = { path = "../memory" }
platform = { path = "../platform" }
serde = { workspace = true }
soul = { path = "../soul" }
speech = { path = "../speech" }
rand = { workspace = true }
sysinfo = "0.32"
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tray-icon = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }

[dev-dependencies]
tempfile = "3.13"
sysinfo = "0.32"
soul = { path = "../soul" }
memory = { path = "../memory" }
inference = { path = "../inference" }
bus = { path = "../bus" }
crypto = { path = "../crypto" }
