[package]
name = "runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
whisper = ["speech/whisper"]

[dependencies]
async-trait = { workspace = true }
bus = { path = "../bus" }
crypto = { path = "../crypto" }
ctp = { path = "../ctp" }
platform = { path = "../platform" }
serde = { workspace = true }
soul = { path = "../soul" }
memory = { path = "../memory" }
inference = { path = "../inference" }
speech = { path = "../speech" }
rand = { workspace = true }
sysinfo = "0.32"
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tray-icon = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winbase", "fileapi", "handleapi", "winnt", "namedpipeapi"] }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3.13"
sysinfo = "0.32"
soul = { path = "../soul" }
bus = { path = "../bus" }
crypto = { path = "../crypto" }
