[package]
name = "runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait = { workspace = true }
bus = { path = "../bus" }
crypto = { path = "../crypto" }
ctp = { path = "../ctp" }
platform = { path = "../platform" }
serde = { workspace = true }
serde_json = "1"
soul = { path = "../soul" }
memory = { path = "../memory" }
inference = { path = "../inference" }
speech = { path = "../speech" }
rand = { workspace = true }

# Model download — embedding model (same exception as speech models)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
sha2 = "0.10"
futures-util = "0.3"
hex = "0.4"
sysinfo = "0.32"
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tray-icon = "0.14"
tracing = { workspace = true }
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winbase", "fileapi", "handleapi", "winnt", "namedpipeapi", "processthreadsapi", "securitybaseapi"] }

[dev-dependencies]
tempfile = "3.13"
sysinfo = "0.32"
soul = { path = "../soul" }
bus = { path = "../bus" }
crypto = { path = "../crypto" }
