[package]
name = "soul"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
bus = { path = "../bus" }
crypto = { path = "../crypto" }
redb.workspace = true
thiserror.workspace = true
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"