[package]
name = "speech"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bus = { path = "../bus" }
tokio = { workspace = true, features = ["fs"] }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Audio I/O (cross-platform)
cpal = "0.15"

# TTS backend (platform-native via unified interface)
tts = "0.26"

# STT backend (whisper.cpp bindings)
whisper-rs = "0.16.0"

[dev-dependencies]
tempfile = "3"
