[package]
name = "speech"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bus = { path = "../bus" }
tokio = { workspace = true, features = ["fs"] }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { version = "1.0", features = ["derive"] }

# Audio I/O (cross-platform)
cpal = "0.15"

# TTS backend (platform-native via unified interface)
tts = "0.26"

# Model download (Phase 5 only — speech models from HuggingFace)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
sha2 = "0.10"
futures-util = "0.3"
hex = "0.4"

# STT backend - Whisper via candle-transformers (pure Rust)
candle-core = { version = "0.10", default-features = false }
candle-nn = { version = "0.10", default-features = false }
candle-transformers = { version = "0.10", default-features = false }
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
rand = { workspace = true }
byteorder = "1"
serde_json = "1"

# STT backend - sherpa-onnx Zipformer (fast streaming alternative to Whisper)
sherpa-onnx = { version = "1.12.36", default-features = false, features = ["shared"] }

# STT backend - NVIDIA Parakeet-EOU (ONNX streaming STT)
parakeet-rs = "0.3.4"

[dev-dependencies]
tempfile = "3"
