[package]
name = "speech"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bus = { path = "../bus" }
tokio = { workspace = true, features = ["fs", "process", "io-util"] }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Audio I/O (cross-platform)
cpal = "0.15"

# TTS backend (platform-native via unified interface)
tts = "0.26"

# Parakeet/Nemotron INT8 streaming STT backend
parakeet-rs = "0.3.4"

[dev-dependencies]
tempfile = "3"
