[package]
name = "cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "sena-cli"
path = "src/main.rs"

[dependencies]
ipc = { path = "../ipc" }

thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
ratatui.workspace = true
crossterm.workspace = true
anyhow.workspace = true
