[package]
name = "crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
zeroize = { workspace = true }
keyring = "3.5"
rand = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
