[package]
name = "ctp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bus = { path = "../bus" }
platform = { path = "../platform" }
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
serde.workspace = true

[dev-dependencies]
async-trait.workspace = true
