[package]
name = "daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "sena-daemon"
path = "src/main.rs"

[dependencies]
runtime = { path = "../runtime" }
ipc = { path = "../ipc" }
bus = { path = "../bus" }

tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
serde_json.workspace = true
tray-icon.workspace = true
