[package]
name = "sena"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "sena"
path = "src/main.rs"

[features]
vulkan = ["runtime/vulkan"]

[dependencies]
ipc = { path = "../ipc" }
bus = { path = "../bus" }

tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
serde_json.workspace = true
tray-icon.workspace = true

[target.'cfg(any(target_os = "windows", target_os = "linux"))'.dependencies]
runtime = { path = "../runtime", features = ["vulkan"] }

[target.'cfg(not(any(target_os = "windows", target_os = "linux")))'.dependencies]
runtime = { path = "../runtime" }
