[package]
name = "inference"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
# Enable NVIDIA CUDA GPU inference. Requires CUDA toolkit installed.
cuda = ["infer/cuda"]
# Enable Apple Metal GPU inference (macOS only).
metal = ["infer/metal"]
# Enable Vulkan GPU inference (Windows/Linux).
vulkan = ["infer/vulkan"]

[dependencies]
bus = { path = "../bus" }
text = { path = "../text" }
infer.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
futures = "0.3"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3.8"
