[package]
name = "prompt"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Event bus for typed events
bus = { path = "../bus" }

# Async runtime
tokio = { workspace = true, features = ["sync", "time", "macros"] }

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true

# Serialization (for PromptTrace, Provenance)
serde.workspace = true
