[package]
name = "runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
# Enable NVIDIA CUDA GPU inference. Requires CUDA toolkit installed.
cuda = ["inference/cuda"]
# Enable Apple Metal GPU inference (macOS only).
metal = ["inference/metal"]

[dependencies]
# Workspace crates
bus = { path = "../bus" }
soul = { path = "../soul" }
memory = { path = "../memory" }
platform = { path = "../platform" }
ctp = { path = "../ctp" }
inference = { path = "../inference" }
speech = { path = "../speech" }
prompt = { path = "../prompt" }
crypto = { path = "../crypto" }

# External dependencies
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
reqwest.workspace = true
futures-util.workspace = true
sha2.workspace = true
hex.workspace = true
serde.workspace = true
toml.workspace = true
uuid.workspace = true
infer.workspace = true

[dev-dependencies]
tempfile.workspace = true
