[package]
name = "speech"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bus = { path = "../bus" }
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
serde.workspace = true
zeroize.workspace = true
cpal = "0.15"

[dev-dependencies]
tempfile.workspace = true
