[package]
name = "speech"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bus = { path = "../bus" }
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
serde.workspace = true
zeroize.workspace = true
cpal = "0.15"
parakeet-rs = "0.3.4"
serde_json = "1.0"
ort = "2.0.0-rc.12"
espeak-rs = "0.1.8"
ndarray = "0.17"

[dev-dependencies]
tempfile.workspace = true
